tests/integration/fail/records/merge_nested_different_vals_no_prio.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::MergeIncompatibleArgs'
({ a.b = 1, a = { b = 2 }}).a.b